# stac-manager

./: .gitignore  README.md  debug_script.py  pyproject.toml  test_parsing.py  test_yaml_keys.py
.agent/_workflows/: brainstorming.md  code-review.md  debugging-workflow.md  spec-review-technical.md  test-driven-development.md
.agent/memory/: episodic.md  procedural.md  semantic.md
.agent/prompts/: execute-implementation-plan.md  generate-implementation-plan.md  manage-agent-memory.md
.github/: AGENTS.md
.github/_workflows/: executing-plans.md  git-worktrees.md  make-local-issues.md  senior-engineer-persona.md  spec-driven-development.md  verification-before-completion.md  writing-plans.md  writing-skills.md
.github/memory/: PHASE_2_PART_2_HANDOFF.md  episodic.md  preferences.md  procedural.md  semantic.md
.github/prompts/: execute-implementation-plan.md  generate-implementation-plan.md  manage-agent-memory.md  spec-review-prompt.md
examples/: DGEO_MIGRATION_QUICKSTART.md  dgeo-data-formats.md  full-pipeline.yaml  landsat-dgeo-migration.yaml  sample_landsat_assets.csv  smoke-test.yaml  verify-workflow.yaml
scripts/: debug_launcher.py  extract_assets_for_dgeo.py  generate_sample_data.py  run_full_pipeline.py  run_smoke_test.py  verify_fetch.py
tests/: test_checkpoint.py  test_config.py  test_context.py  test_exceptions.py  test_failures.py  test_graph.py  test_integration.py  test_manager.py  test_protocols.py  test_registry.py  test_utils.py  test_utils_geom.py  test_utils_logging.py  test_utils_summary.py  test_utils_validation.py
(+222 files in other folders)
